# django-scim2

./: .coveragerc  .flake8  .gitignore  .isort.cfg  .readthedocs.yaml  .travis.yml  CHANGES.txt  LICENSE.txt  MANIFEST.in  README.rst  db.sqlite3  pyproject.toml  pytest.ini  requirements.txt  scim.py  scripts.py  setup.py  test_settings.py  tox.ini
.circleci/: config.yml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  custom.md  feature_request.md
.github/workflows/: cicd.yml
demo/: README  manage.py  requirements.txt  settings.py  urls.py  wsgi.py
demo/app/: adapters.py  constants.py  log_handlers.py  middleware.py  models.py  utils.py
demo/app/migrations/: 0001_initial.py  0002_alter_group_options_alter_user_managers_and_more.py
demo/root/: settings.py  urls.py  wsgi.py
demo/scim_customizations/: log_handlers.py
django_scim/: adapters.py  auth.py  constants.py  exceptions.py  filter.py  filters.py  grammars.py  middleware.py  models.py  settings.py  urls.py  utils.py  views.py
django_scim/schemas/: __init__.py
django_scim/tests/: hashers.py  settings.py  test_adapters.py  test_filter.py  test_filters.py  test_general.py  test_grammar.py  test_middleware.py  test_models.py  test_utils.py  test_views.py  urls.py
docs/: Makefile  adapters.rst  conf.py  exceptions.rst  filter.rst  filters.rst  index.rst  make.bat  models.rst  requirements.txt  settings.rst  utils.rst  views.rst
src/django_scim/: adapters.py  constants.py  filters.py  middleware.py  models.py  settings.py  types.py  urls.py  utils.py  views.py
src/django_scim/schemas/: __init__.py
tests/: filters.py  hashers.py  models.py  settings.py  test_adapters.py  test_filters.py  test_middleware.py  test_models.py  test_utils.py  test_views.py
