[tool.poetry]
name = "django-scim2"
version = "0.19.1"
description = "A partial implementation of the SCIM 2.0 provider specification for use with Django."
license = "MIT"
authors = ["Paul Logston <paul@15five.com>"]
maintainers = ["Devs <devs@15five.com>"]
readme = "README.rst"
homepage = "https://pypi.org/project/django-scim2/"
repository = "https://github.com/15five/django-scim2"
documentation = "https://django-scim2.readthedocs.io/en/stable/"
keywords = ["django", "scim", "scim2", "2.0"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Web Environment",
  "Framework :: Django",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Internet",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
packages = [
    { include = "django_scim", from = "src" },
]

[tool.poetry.dependencies]
python = ">=3.9"
scim2-filter-parser = ">=0.5.0"
django = ">=4.2"

[tool.poetry.dev-dependencies]
mock = "^5.1.0"
tox = "^4.23.2"
flake8 = "^7.1.1"
toml = "^0.10.1"
flake8-isort = "^6.1.1"
pytest = ">=5.4.0"
pytest-django = "4.9.0"
coverage = "^7.6.11"
pytest-cov = "6.0.0"

[tool.black]
line-length = 100
skip-string-normalization = true

[build-system]
requires = ["poetry-core>=1.5.2"]
build-backend = "poetry.core.masonry.api"
